Fix word wrap and add horacemann cipher

--- a/zenith-ui/src/app/plaintext/plaintext.component.css
+++ b/zenith-ui/src/app/plaintext/plaintext.component.css
@@ -18,7 +18,7 @@
  */
 
 .card-body div {
-  white-space: pre;
+  white-space: pre-wrap;
   font-family: "Courier New", Courier, monospace;
   color: initial;
 }
